--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.1",
   "author": "xenor",
   "dependencies": {
-    "backbone": "~0.9.2"
+    "backbone": "~0.9.2",
+    "express": "~3.0.0",
+    "socket.io": "~0.9.10",
+    "consolidate": "~0.4.0"
   },
   "devDependencies": {}
 }
