--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "version": "0.0.1",
   "author": "xenor",
   "dependencies": {
-    "backbone": "~0.9.2",
     "express": "~3.0.0",
     "socket.io": "~0.9.10",
-    "consolidate": "~0.4.0"
+    "consolidate": "~0.4.0",
+    "dive": "~0.2.0",
+    "node-uuid": "~1.3.3",
+    "bootstrap-stylus": "~0.2.1",
+    "stylus": "~0.29.0",
+    "jade": "~0.27.5"
   },
   "devDependencies": {}
 }
