--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "consolidate": "~0.4.0",
     "dive": "~0.2.0",
     "node-uuid": "~1.3.3",
-    "bootstrap-stylus": "~0.2.1",
+    "less": "~1.3.0",
     "stylus": "~0.29.0",
+    "github-flavored-markdown": "~1.0.1",
+    "phantom": "~0.3.5",
     "jade": "~0.27.5"
   },
   "devDependencies": {}
