--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "stylus": "~0.29.0",
     "github-flavored-markdown": "~1.0.1",
     "phantom": "~0.3.5",
+    "coffee-script", "~1.3.3",
     "jade": "~0.27.5"
   },
   "devDependencies": {}
