--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "github-flavored-markdown": "~1.0.1",
     "phantom": "~0.3.5",
     "coffee-script", "~1.3.3",
+    "jsdom", "0.2.15",
     "jade": "~0.27.5"
   },
   "devDependencies": {}
