--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "scissors",
   "description": "html cutter",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "author": "xenor",
   "dependencies": {
     "express": "~3.0.0",
     "socket.io": "~0.9.10",
     "consolidate": "~0.4.0",
-    "dive": "~0.2.0",
-    "node-uuid": "~1.3.3",
-    "stylus": "~0.29.0",
     "github-flavored-markdown": "~1.0.1",
-    "phantom": "~0.3.5",
+    "zombie": "~2.0.0",
     "coffee-script": "~1.3.3",
-    "jsdom": "~0.2.15",
-    "html2jade": "0.1.0",
+    "cheerio": "~0.10.1",
     "jade": "~0.27.5"
   },
   "devDependencies": {}
